<resources>
    <string name="app_name">CitizenFood</string>

    <string name="action_settings">Settings</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>

    <string name="connection_title">Page de connexion</string>
    <string name="register_title">Page d\'inscription</string>

    <string name="create_account_string">Je m\'inscris</string>
    <string name="register_btn">S\'inscrire</string>
    <string name="connect">Connexion</string>
    <string name="menu_logout">Deconnexion</string>

    <string name="exemple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>

    <!-- Fragments -->
    <string name="heading_resto">Restaurants</string>
    <string name="heading_my_resto">Mes restaurants</string>
</resources>
