<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="fr.citizenfood.citizenfood.LoginActivity">


        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_title"
            android:textSize="60dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:textSize="25dp"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="25dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="40dp"
            android:gravity="center"
            android:text="@string/create_account_string" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_resto"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"/>

    </LinearLayout>

