<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_color"
    tools:context="fr.citizenfood.citizenfood.Activities.RegisterActivity">


    <LinearLayout
        android:padding="15dp"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shadow"
        android:id="@+id/linearLayout"
        android:elevation="20dp"
        >
        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:fontFamily="@font/citizenfont"
            android:textSize="30dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp">

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:textSize="14dp"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:textSize="15dp"
            android:textColor="@color/button_text"
            android:background="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_btn" />


    </LinearLayout>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_resto"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:fontFamily="@font/citizenfont"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20dp" />

</RelativeLayout>

